--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.3.2
   url_launcher: ^6.2.1  # Pour ouvrir des liens externes
+  flutter_launcher_icons: ^0.14.4
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
