Implement secure logging and code quality scripts
Replaced print statements with secure Logger calls across providers and added Logger imports. Introduced multiple Python scripts to automate code quality fixes, including print-to-Logger conversion and withOpacity deprecation fixes. Added new utility files for secure logging and error handling. Updated analysis options and build config for flutter_secure_storage. Improved code quality and security as documented in SESSION_FIXES_LOG.md.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.3.2
   url_launcher: ^6.2.1  # Pour ouvrir des liens externes
   flutter_launcher_icons: ^0.14.4
+  flutter_secure_storage: ^9.2.2  # Secure storage for API keys and credentials
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
